name:                sl-logging-format
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/sl-logging-format#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     SLLogFormatting
  default-language:    Haskell2010
  build-depends:       aeson >= 0.11.2.1,
                       base >= 4.7 && < 5,
                       bytestring >= 0.10.8.1,
                       logging-effect >= 1.1,
                       time >= 1.6.0.1
